welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:5: error: value unary_! is not a member of Unit
  while (!arrive){
         ^ColumnByColumn:20: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return true
           ^ColumnByColumn:20: warning: enclosing method arrive has result type Unit: return value discarded
    return true
    ^ColumnByColumn:22: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  else return false
              ^ColumnByColumn:22: warning: enclosing method arrive has result type Unit: return value discarded
  else return false
       ^